--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  xml: ^5.3.1
 
 dev_dependencies:
   flutter_test:
@@ -22,8 +23,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-#  assets:
-#     - assets/icons
+  assets:
+    - assets/recipes/
 
 
   fonts:
