--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   xml: ^5.3.1
+  firebase_auth: ^3.3.4
+  google_sign_in: ^5.2.1
+  font_awesome_flutter: ^9.2.0
+  provider: ^6.0.2
+  firebase_core: ^1.10.6
+  rflutter_alert: ^2.0.4
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
