--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_core: ^1.10.6
   rflutter_alert: ^2.0.4
   fluttertoast: ^8.0.8
+  pay: ^1.0.6
 
 dev_dependencies:
   flutter_test:
