--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   rflutter_alert: ^2.0.4
   fluttertoast: ^8.0.8
   pay: ^1.0.6
+  easy_localization: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +34,7 @@ flutter:
 
   assets:
     - assets/recipes/
+    - assets/translations/
 
 
   fonts:
